--- a/index.html
+++ b/index.html
@@ -85,16 +85,24 @@
         <h1>Welcome to the 8 bit cpu for bitvm</h1>
         <p>Where bitcoin learns to be turing complete</p>
         <div class="cpu">
+            <div class="visualizer_container">
+                <div class="halted hidden">
+                    The computer entered a halt state
+                    <br><br>
+                </div>
+                <div class="visualizer"></div>
+            </div>
             <h3>
                 Step 1. Pick a program you want to run
             </h3>
             <button class="load_counting_program">Counting program</button>
             <button class="load_bounded_loop_test">Bounded loop test</button>
             <button class="use_your_own">Use your own</button>
+            <div class="explainer"></div>
             <div class="use_your_own_form hidden">
                 <p>Paste your program here</p>
                 <textarea class="paste_program"></textarea>
-                <p><button class="submit_program">Submit</button></p>
+                <p><button class="submit_program">Submit</button> <a href="#" onclick="$( '.write' ).click()">Learn how to do it</a></p>
             </div>
             <div class="own_loaded hidden">
                 <p>Your program is loaded. Start incrementing the clock and watch it run.</p>
@@ -114,17 +122,6 @@
                 Step 4. Write a program yourself
             </h3>
             <button class="write">Try it</button>
-            <h3>
-                Here is the computer
-            </h3>
-            <div class="visualizer_container">
-                <div class="explainer"></div>
-                <div class="halted hidden">
-                    The computer entered a halt state
-                    <br><br>
-                </div>
-                <div class="visualizer"></div>
-            </div>
         </div>
         <div class="learn_about_bitvm hidden">
             <button class="go_back">Go back</button>
@@ -362,7 +359,9 @@
                 item.onclick = () => {
                     $( '.cpu' ).classList.remove( "hidden" );
                     $( '.learn_about_bitvm' ).classList.add( "hidden" );
-                    $( '.learn_to_write' ).classList.add( "hidden" );
+                    $( '.learn_about_bitvm' ).classList.add( "hidden" );
+                    $( '.use_your_own_form' ).classList.add( "hidden" );
+                    $( '.explainer' ).classList.add( "hidden" );
                 }
             });
             $( '.learn' ).onclick = () => {
