--- a/index.html
+++ b/index.html
@@ -117,11 +117,8 @@
             <h3>
                 Step 3. Learn what in the world is happening
             </h3>
-            <button class="learn">Learn about bitvm</button>
-            <h3>
-                Step 4. Write a program yourself
-            </h3>
-            <button class="write">Try it</button>
+            <button class="learn">Learn about bitvm</button> 
+            <button class="write">Write a program yourself</button>
         </div>
         <div class="learn_about_bitvm hidden">
             <button class="go_back">Go back</button>
