--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         </script>
     </head>
     <body>
-        <h1>Welcome to the 8 bit cpu for bitvm</h1>
-        <p>Where bitcoin learns to be turing complete</p>
+        <h1>Welcome to the STU-1</h1>
+        <p>An 8 bit cpu for bitvm</p>
         <div class="cpu">
             <div class="visualizer_container">
                 <div class="halted hidden">
