--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
                 $( '.visualizer' ).innerHTML = displayState( output );
             }
             $( '.use_your_own' ).onclick = () => {
+                stop = true;
                 $( '.paste_program' ).value = "";
                 $( '.use_your_own_form' ).classList.remove( "hidden" );
                 $( '.explainer' ).innerHTML = ``;
@@ -378,6 +379,7 @@
                 $( '.learn_to_write' ).classList.remove( "hidden" );
             }
             $( '.load_counting_program' ).onclick = () => {
+                stop = true;
                 $( '.halted' ).classList.add( "hidden" );
                 $( '.use_your_own_form' ).classList.add( "hidden" );
                 output = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,1,1,0,1,0,0,1,1,1,1,0,1,0,1,0,0,0,0,0,0,1,0,1,1,1,1,0,1,0,0,1,1,1,0,0,1,1,0,0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0];
@@ -414,6 +416,7 @@
                 `;
             }
             $( '.load_bounded_loop_test' ).onclick = () => {
+                stop = true;
                 $( '.halted' ).classList.add( "hidden" );
                 $( '.use_your_own_form' ).classList.add( "hidden" );
                 output = [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,1,0,0,0,1,0,1,0,0,1,1,1,0,0,0,0,1,1,1,1,1,0,0,1,0,1,1,1,0,0,1,1,1,0,1,1,0,0,1,1,0,0,0,1,1,0,1,0,0,1,1,1,1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,0,0];
