--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 item.onclick = () => {
                     $( '.cpu' ).classList.remove( "hidden" );
                     $( '.learn_about_bitvm' ).classList.add( "hidden" );
-                    $( '.learn_about_bitvm' ).classList.add( "hidden" );
+                    $( '.learn_to_write' ).classList.add( "hidden" );
                     $( '.use_your_own_form' ).classList.add( "hidden" );
                     $( '.explainer' ).classList.add( "hidden" );
                 }
