--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 If you get an error message, that means you don't have python installed. Look up how to do that. You need version 3 so look up how to install version 3.
             </p>
             <p>
-                If you run python --version successfully and it says you have version 2, version 1, that's bad -- really, anything other than version 3 is bad, unless it's version 3-point-something. E.g. 3.6 or 3.7 will both work fine -- anything in version 3 is okay. If you don't have version 3-point-something, look up how to install it or look up how to upgrade your current version of python to version 3-point-something.
+                If you run python --version successfully and it says you have version 2 or version 1, that's bad -- really, anything other than version 3 is bad, unless it's version 3-point-something. E.g. 3.6 or 3.7 will both work fine -- anything in version 3 is okay. If you don't have version 3-point-something, look up how to install it or look up how to upgrade your current version of python to version 3-point-something.
             </p>
             <p>
                 Depending on whether you "installed" version 3 or "upgraded" to version 3, you might need to run the compiler in one of two ways. If you installed it, run the compiler like this:
