--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
             <div class="code">
                 0. NOP -- do nothing<br>
                 1. LDA -- load a value from ram into register A<br>
-                2. ADD -- put the sum of registers A and B in register A<br>
-                3. SUB -- put the difference of registers A and B in register A<br>
+                2. add the number in whatever byte you specify to the number currently in register A<br>
+                3. SUB -- subtract the number in whatever byte you specify from the number currently in register A<br>
                 4. STA -- store register A in ram<br>
                 5. LDI -- load a value directly into register A (not from ram)<br>
                 6. JMP -- jump to another instruction<br>
@@ -297,8 +297,8 @@
             <div class="code">
                 0. NOP -- do nothing<br>
                 1. LDA -- load a value from ram into register A<br>
-                2. ADD -- put the sum of registers A and B in register A<br>
-                3. SUB -- put the difference of registers A and B in register A<br>
+                2. ADD -- add the number in whatever byte you specify to the number currently in register A<br>
+                3. SUB -- subtract the number in whatever byte you specify from the number currently in register A<br>
                 4. STA -- store register A in ram<br>
                 5. LDI -- load a value directly into register A (not from ram)<br>
                 6. JMP -- jump to another instruction<br>
